Enhance README with project details and instructions
Expanded project description, added features, tech stack, and running instructions.