@@ -1,21 +1,60 @@
 # Library Management System (JavaFX)
 
-A simple JavaFX-based Library Management System that demonstrates OOP concepts and GUI development in Java.  
+A simple yet functional **Library Management System** built with **JavaFX** and **Java 17**.  
+This project demonstrates strong understanding of **object-oriented programming**, clean design structure, and a **user-friendly interface** for managing books efficiently.
+
+---
 
 ## Features
-- Add books with title and author
-- View all books in the library
-- Clean and intuitive graphical interface
-- Built using JavaFX for desktop GUI
 
-## Project Structure
-- `Book.java` – Represents a book with title and author
-- `Library.java` – Handles the collection of books
-- `LibraryGUI.java` – Provides the JavaFX user interface
+- ➕ Add new books with title and author  
+- 📖 View all added books in a readable format  
+- 🗑️ Clear the current book list  
+- 💾 Organized class structure with clear separation of logic and interface  
+- 🎨 Styled with custom CSS for a clean, modern look  
 
-## Technologies Used
-- Java 17
-- JavaFX SDK
-- IntelliJ IDEA
+---
 
-This project was created as a learning exercise to showcase **Java programming, OOP, and GUI skills**. 
+## Tech Stack
+
+- **JavaFX 17** – GUI framework  
+- **Java 17** – Core language  
+- **CSS** – UI styling  
+- **IntelliJ IDEA** – IDE used for development  
+
+---
+
+## How to Run
+
+1. Make sure you have **JDK 17** and **JavaFX SDK 17+** installed.  
+2. Clone this repository:
+   ```bash
+   git clone https://github.com/CreepyBen/Library-JavaFX.git
+3. Open the project in IntelliJ IDEA (or your preferred IDE).
+4. Set up JavaFX:
+      Add the JavaFX SDK lib folder to your module path.
+      Under Run Configurations → VM Options, add:
+      --module-path "C:\path\to\javafx-sdk-17\lib" --add-modules javafx.controls,javafx.fxml
+5. Run LibraryGUI.java as the main class.
+
+![App Screenshot](C:\Users\msi modern\Pictures\Screenshots\Screenshot 2025-11-12 121920.png)
+
+---
+
+### Learning Highlights
+
+Practiced OOP principles (encapsulation, composition).
+
+Transitioned from console-based Java to JavaFX GUI development.
+
+Integrated CSS styling to improve user interface design.
+
+Applied version control with Git and GitHub for project management.
+
+## Future Improvements
+
+Add book search and delete functionality
+
+Save data using a database or file storage
+
+Improve overall UI with advanced CSS or Scene Builder
